# taskpad

./: .gitignore  .portfolio.json  .vercelignore  CLAUDE.md  README.md  firestore.rules  index.html  package-lock.json  package.json  vercel.json  vite.config.js
.claude/docs/: architectural_patterns.md  domain_update_system.md  notes_reference.md
docs/superpowers/plans/: 2026-03-11-shared-notes.md  2026-03-16-multi-platform-auto-update.md
docs/superpowers/specs/: 2026-03-11-shared-notes-design.md  2026-03-16-multi-platform-auto-update-design.md
public/: version.json
public/update/darwin-aarch64/: latest.json
public/update/darwin-x86_64/: latest.json
public/update/linux-x86_64/: latest.json
public/update/windows-x86_64/: latest.json
scripts/: bump-version.sh  release.sh
src/: App.jsx  crypto.js  firebase.js  main.jsx  markdown.js  styles.css  sync.js  updater.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: android_update.rs  lib.rs  main.rs
