[package]
name = "taskpad"
version = "1.0.0"
description = "A lightweight minimalist task manager"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Required by Tauri for production builds (enables the custom protocol handler).
custom-protocol = ["tauri/custom-protocol"]
