[package]
name = "taskpad"
version = "1.0.0"
description = "A lightweight minimalist task manager"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
