[package]
name = "taskpad"
version = "1.12.1"
description = "A lightweight minimalist task manager"
authors = ["you"]
edition = "2021"

[lib]
name = "taskpad"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
